--- a/pom.xml
+++ b/pom.xml
@@ -117,14 +117,19 @@
         <dependency>  
             <groupId>mysql</groupId>  
             <artifactId>mysql-connector-java</artifactId>  
-            <version>5.1.30</version>  
-        </dependency>  
+            <version>5.1.29</version>
+        </dependency>
         <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->  
         <dependency>  
             <groupId>commons-dbcp</groupId>  
             <artifactId>commons-dbcp</artifactId>  
             <version>1.2.2</version>  
-        </dependency>  
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
         <!-- JSTL标签类 -->  
         <dependency>  
             <groupId>jstl</groupId>  
@@ -186,5 +191,28 @@
     </dependencies>
   <build>
     <finalName>storm</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>1.6</source>
+                  <target>1.6</target>
+              </configuration>
+          </plugin>
+      </plugins>
+      <resources>
+          <resource>
+              <directory>src/main/java</directory>
+              <includes>
+                  <include>**/*.xml</include>
+              </includes>
+              <filtering>true</filtering>
+          </resource>
+          <resource>
+              <directory>src/main/resources</directory>
+              <filtering>true</filtering>
+          </resource>
+      </resources>
   </build>
 </project>
